# IA_Question

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  processor.py  pyproject.toml  requirements.txt  web_processor.py
prompts/: master_quiz.txt
