[project]
name = "ia-obsidian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.10.2",
    "odfpy>=1.4.1",
    "openai>=2.32.0",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "xhtml2pdf>=0.2.17",
]
